# cpp_study

./: CMakeLists.txt  README.md
machine_learning/gradientDescent/: gradient_descent.cpp  gradient_descent.h
machine_learning/linearRegression/: linar_regression.cpp  linear_regression.h
machine_learning/logisticRegression/: logistc_regression.h  logistic_regression.cpp
